# sophia_next

./: .gitignore  CMakeLists.txt  README.md  execute_sophia.cpp  sophia_interface.cpp  sophia_interface.h
include/: sophia_data.h  sophia_interface.h
lib/: get_gtest.sh  get_pybind11.sh
python/: interface.cpp
src/: execute_sophia.cpp  sophia_data.cpp  sophia_interface.cpp
test/: testFirst.cpp  testPythonInterface.py.in
